//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Server {
  id String [pk]
  name String [not null]
  imageUrl String [not null]
  inviteCode String [unique, not null]
  userId String [not null]
  user User [not null]
  members Member [not null]
  channels Channel [not null]
}

Table Member {
  id String [pk]
  role MemberRole [not null, default: 'GUEST']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user User [not null]
  serverId String [not null]
  server Server [not null]
  conversationsInitiated Conversation [not null]
  conversationsReceived Conversation [not null]
  messages Message [not null]
  directMessages DirectMessage [not null]
}

Table Channel {
  id String [pk]
  name String [not null]
  type ChannelType [not null, default: 'TEXT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  serverId String [not null]
  server Server [not null]
  userId String [not null]
  user User [not null]
  messages Message [not null]
}

Table Message {
  id String [pk]
  content String [not null]
  fileUrl String
  deleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  memberId String [not null]
  member Member [not null]
  channelId String [not null]
  channel Channel [not null]
}

Table Conversation {
  id String [pk]
  memberOneId String [not null]
  memberOne Member [not null]
  memberTwoId String [not null]
  memberTwo Member [not null]
  directMessages DirectMessage [not null]

  indexes {
    (memberOneId, memberTwoId) [unique]
  }
}

Table DirectMessage {
  id String [pk]
  content String [not null]
  fileUrl String
  deleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  memberId String [not null]
  member Member [not null]
  conversationId String [not null]
  conversation Conversation [not null]
}

Table Profile {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  name String
  imageUrl String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  hashedPassword String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts Account [not null]
  profile Profile
  servers Server [not null]
  members Member [not null]
  channels Channel [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Enum MemberRole {
  ADMIN
  MODERATOR
  GUEST
}

Enum ChannelType {
  TEXT
  AUDIO
  VIDEO
}

Ref: Server.userId > User.id [delete: Cascade]

Ref: Member.userId > User.id [delete: Cascade]

Ref: Member.serverId > Server.id [delete: Cascade]

Ref: Channel.serverId > Server.id [delete: Cascade]

Ref: Channel.userId > User.id [delete: Cascade]

Ref: Message.memberId > Member.id [delete: Cascade]

Ref: Message.channelId > Channel.id [delete: Cascade]

Ref: Conversation.memberOneId > Member.id [delete: Cascade]

Ref: Conversation.memberTwoId > Member.id [delete: Cascade]

Ref: DirectMessage.memberId > Member.id [delete: Cascade]

Ref: DirectMessage.conversationId > Conversation.id [delete: Cascade]

Ref: Profile.userId - User.id [delete: Cascade]

Ref: Account.userId > User.id [delete: Cascade]